<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.mac.tasktimer.MainActivity">
    <item
        android:title="@string/menutitle_addTask"
        android:orderInCategory="100"
        android:id="@+id/menumain_addTask"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/menumain_showDuration"
        android:orderInCategory="101"
        android:id="@+id/menumain_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menumain_settings"
        android:orderInCategory="102"
        android:title="@string/menumain_settings"
        app:showAsAction="never"/>
    <item
        android:title="@string/menumain_showAbout"
        android:orderInCategory="103"
        android:id="@+id/menumain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/menumain_generate"
        android:orderInCategory="104"
        android:id="@+id/menumain_generate"
        app:showAsAction="never"
        android:visible="false"/>
</menu>
